base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wave-model-core
  namespace: wave-model-core
  labels:
    app: wave-model-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wave-model-core
  template:
    metadata:
      labels:
        app: wave-model-core
    spec:
      containers:
        - name: wave-model-core
          image: guedesclaudio/wave-model-core:cb03d1c-20250820-001522
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /docs
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /docs
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
